# dyflissupallur

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/dyflissupallur/: __main__.py  version.py
src/dyflissupallur/data/: logger.ini
