[metadata]
name = dyflissupallur
version = attr: dyflissupallur.version.__version__
url = https://github.com/sunarch/dyflissupallur
project_urls =
    Bug Tracker = https://github.com/sunarch/dyflissupallur/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = dyflissupallur - a dungeon platformer game
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dyflissupallur
platforms = Any

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/dyflissupallur

[options.entry_points]
console_scripts =
    dyflissupallur = dyflissupallur.__main__:main

[options.packages.find]
where = src

[options.package_data]
    dyflissupallur = data/logger.ini
